--- a/css/style.css
+++ b/css/style.css
@@ -110,8 +110,11 @@ header {
 }
 
 #todo-form input {
+  position: absolute;
   padding: 12px;
   margin-right: 12px;
+  margin-left: 145px;
+  margin-top: 50px;
   width: 225px;
 
   border-radius: 4px;
@@ -129,6 +132,10 @@ header {
 
   border-radius: 4px;
   border: none;
+  
+  margin-right: 12px;
+  margin-left: 380px;
+  margin-top: 50px;
 
   box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.25);
   background: #ffffff;
@@ -186,7 +193,7 @@ header {
   padding: 12px;
   border-radius: 4px;
   width: 225px;
-  min-height: 250px; // height
+  min-height: 250px;
 
   flex-shrink: 0;
 }
@@ -198,42 +205,44 @@ header {
   box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.15);
   padding: 6px;
   border-radius: 40px;
-  font-size: 16px;
+  font-size: 18px;
   cursor: move;
   height: auto;;
   flex-direction: column;
-  justify-content: center; /* center vertically */
-  align-items: center; /* center horizontally */
-  text-align: center; /* Add this line */
+  justify-content: center;
+  align-items: center; 
+  text-align: center;
+}
+
+.task textarea {
+	position:relative;
+	top:4px;
+	margin-bottom: 6px;
+	font-size: 16px;
+	font-weight: 500;
+}
+
+.task textarea::placeholder {
+  font-weight: normal;
 }
 
 .task-desc {
   display: flex;
   width: 80%;
-  height: 80%;
-  border-radius: 30px;
-  border: 2px solid #ddd;
+  
+  border-radius: 8px;
+  border: 1.5px solid #e9e9e9;
   
   justify-content: center;
   align-items: center;
   text-align: center;
   background: white;
   color: black;
-  box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.15);
-
-  padding: 6px;
+  /*box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.15);*/
 
   font-size: 15px;
-}
-
-.task-desc input[type="text"] {
-  flex-grow: 1;
-  border: none;
-  outline: none;
-  font-size: 16px;
-  padding: 0 10px;
-  background: transparent;
-  border-radius: 30px;
+  resize: vertical; /* allows the user to resize the field vertically */
+  resize: none; /* disable resizing with mouse */
 }
 
 .task-desc button {
@@ -291,10 +300,11 @@ header {
   justify-content: center;
   align-items: center;
   text-align: center;
-  width: 32px;
-  height: 32px;
+  width: 45px;
+  height: 45px;
   border-radius: 50%;
   background-color: #cccccc;
+  margin-bottom:5px; /*margin betwen name and avatar*/
 }
 
 .task .name {
@@ -309,7 +319,8 @@ header {
 
 #temp-lane {
   display: flex;
-  flex-direction: row;
+  margin-left: 280px;
+  margin-top: 10px;
   overflow-x: auto;
 }
 
