--- a/css/style.css
+++ b/css/style.css
@@ -35,8 +35,8 @@ header {
   position:relative;
   flex-direction: column;
   justify-content: space-around;
-  width: 25px;
-  height: 20px;
+  width: 2.5vh;
+  height: 2.5vh;
   padding: 0;
   right:50%;
   top:50%;
@@ -47,7 +47,7 @@ header {
 
 .hamburger-line {
   width: 100%;
-  height: 2px;
+  height: 0.22vh;
   background-color: white;
 }
 
@@ -63,21 +63,20 @@ header {
 }
 
 .workplan {
-  padding: 15px;
   box-sizing: border-box;
   font-family: 'Roboto', sans-serif;
-  font-size: 38px;
+  font-size: 3.8vh;
   font-weight: 700;
   text-align: center;
   text-transform: uppercase;
-  letter-spacing: 2px;
+  letter-spacing: 0.3vh;
   color: #fff;
-  text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
+  text-shadow: -0.10vh -0.10vh 0 #000, 0.10vh -0.10vh 0 #000, -0.10vh 0.10vh 0 #000, 0.10vh 0.10vh 0 #000;
 }
 
 .workplan text  {
 	display:inline-block;
-	line-height: 40px;
+	line-height: 0.4vh;
 }
 
 .workplan img {
@@ -92,16 +91,17 @@ header {
 
 .workplan .date {
   position: relative;
-  top: -20px;
-  margin-left: 125px;
-  font-size: 19px;
+  top: -1.5vh;
+  margin-left: 11.8vh;
+  font-size: 2vh;
   font-weight: bold;
 }
 
 ---- FORM ---- 
 #todo-form {
+  display: inline-block;
+  vertical-align: top;
   position: relative;
-  padding: 32px 32px 0;
   opacity: 0;
   transition: opacity 0.5s ease-in-out;
 }
@@ -111,43 +111,43 @@ header {
 
 #todo-form input {
   position: absolute;
-  padding: 12px;
-  margin-right: 12px;
-  margin-left: 145px;
-  margin-top: 50px;
-  width: 225px;
+  padding: 1.3vh;
+  margin-right: 1.3vh;
+  margin-left: 16vh;
+  margin-top: 5.4vh;
+  width: 24.5vh;
 
-  border-radius: 4px;
+  border-radius: 1vh;
   border: none;
 
-  box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.25);
+  box-shadow: 0vh 0.53vh 1.61vh rgba(0, 0, 0, 0.25);
   background: white;
 
-  font-size: 14px;
+  font-size: 1.6vh;
   outline: none;
 }
 
 #todo-form button {
-  padding: 12px 32px;
+  padding: 1.25vh 3.35vh;
 
-  border-radius: 4px;
+  border-radius: 0.8vh;
   border: none;
   
-  margin-right: 12px;
-  margin-left: 380px;
-  margin-top: 50px;
+  margin-right: 0.12vh;
+  margin-left: 41.2vh;
+  margin-top: 5.35vh;
 
-  box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.25);
+  box-shadow: 0vh 0.53vh 1.61vh rgba(0, 0, 0, 0.25);
   background: #ffffff;
   color: black;
 
   font-weight: bold;
-  font-size: 14px;
+  font-size: 1.6vh;
   cursor: pointer;
 }
 
 .remove-button {
-	box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.25);
+	box-shadow: 0vh 0.53vh 1.61vh rgba(0, 0, 0, 0.25);
 }
 
 /* ---- BOARD ---- */
@@ -155,45 +155,45 @@ header {
   display: flex;
   align-items: flex-start;
   justify-content: center;
-  gap: 80px;
+  gap: 8vh;
   transition: gap 0.3s ease-in-out; /* gap animation */
-  padding: 24px 32px;
-
-  overflow-x: auto;
-  overflow-y: hidden;
+  padding: 2.5vh 3.3vh;
   
     /* set a fixed width to prevent the container from expanding */
   width: 100vw;
-  max-width: calc(100vw - 32px); /* subtract the horizontal padding */
+  max-width: calc(100vw - 3.45vh); /* subtract the horizontal padding */
 
   height: 100%;
 }
 
 .heading {
-  font-size: 22px;
+  font-size: 2.2vh;
   font-weight: bold;
-  margin-bottom: 8px;
+  margin-bottom: 0.8vh;
 }
 
 .heading2 {
-  font-size: 14px;
+  top:1vh;
+  font-size: 1.6vh;
   font-weight: bold;
 }
 
 
 .swim-lane {
+display: inline-block;
+  vertical-align: top;
   display: flex;
   flex-direction: column;
 
-  gap: 12px;
+  gap: 1.2vh;
 
   background: #f4f4f4;
-  box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.25);
+  box-shadow: 0vh 0.53vh 1.61vh rgba(0, 0, 0, 0.25);
 
-  padding: 12px;
-  border-radius: 4px;
-  width: 225px;
-  min-height: 250px;
+  padding: 0.14vh;
+  border-radius: 0.43vh;
+  width: 24.27vh;
+  min-height: 27vh;
 
   flex-shrink: 0;
 }
@@ -202,12 +202,14 @@ header {
   display: flex;
   background: white;
   color: black;
-  box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.15);
-  padding: 6px;
-  border-radius: 40px;
-  font-size: 18px;
+  box-shadow: 0vh 0.53vh 1.61vh rgba(0, 0, 0, 0.25);
+  padding: 0.64vh;
+  border-radius: 4.31vh;
+  font-size: 1.94vh;
   cursor: move;
-  height: auto;;
+  height: auto;
+  width: 95%;
+  margin-left: 0.75vh;
   flex-direction: column;
   justify-content: center;
   align-items: center; 
@@ -216,9 +218,9 @@ header {
 
 .task textarea {
 	position:relative;
-	top:4px;
-	margin-bottom: 6px;
-	font-size: 16px;
+	top:0.30vh;
+	margin-bottom: 0.64vh;
+	font-size: 1.72vh;
 	font-weight: 500;
 }
 
@@ -228,19 +230,19 @@ header {
 
 .task-desc {
   display: flex;
-  width: 80%;
+  width: 95%;
   
-  border-radius: 8px;
-  border: 1.5px solid #e9e9e9;
-  
+  border-radius: 0.86vh;
+  border: 0.161vh solid #e9e9e9;
+
   justify-content: center;
   align-items: center;
   text-align: center;
   background: white;
   color: black;
-  /*box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.15);*/
+  /*	box-shadow: 0vh 0.53vh 1.61vh rgba(0, 0, 0, 0.25);*/
 
-  font-size: 15px;
+  font-size: 1.61vh;
   resize: vertical; /* allows the user to resize the field vertically */
   resize: none; /* disable resizing with mouse */
 }
@@ -249,19 +251,19 @@ header {
   background: #007bff;
   color: white;
   border: none;
-  border-radius: 30px;
-  padding: 8px 16px;
-  font-size: 16px;
+  border-radius: 3.23vh;
+  padding: 0.86vh 1.72vh;
+  font-size: 1.72vh;
   cursor: pointer;
-  margin-left: 10px;
+  margin-left: 1.07vh;
 }
 
 .task-actions {
   display: inline-block;
-  font-size: 12px;
-  padding: 4px 6px;
-  margin-left: 5px; // Edytuj - X 
-  border-radius: 4px;
+  font-size: 1.29vh;
+  padding: 0.43vh 0.64vh;
+  margin-left: 0.53vh;
+  border-radius: 0.43vh;
   background-color: #bbb;
   color: #fff;
   border: none;
@@ -271,7 +273,7 @@ header {
 }
 
 .task .task-actions:last-of-type {
-  margin-right: 10px;
+  margin-right: 1.07vh;
   position: relative;
 }
 
@@ -300,15 +302,15 @@ header {
   justify-content: center;
   align-items: center;
   text-align: center;
-  width: 45px;
-  height: 45px;
+  width: 4.85vh;
+  height: 4.85vh;
   border-radius: 50%;
   background-color: #cccccc;
-  margin-bottom:5px; /*margin betwen name and avatar*/
+  margin-bottom:0.53vh; /* margin betwen name and the avatar */
 }
 
 .task .name {
-  font-size: 14px;
+  font-size: 1.51vh;
   font-weight: bold;
 }
 
@@ -319,28 +321,21 @@ header {
 
 #temp-lane {
   display: flex;
-  margin-left: 280px;
-  margin-top: 10px;
+  margin-left: 30.2vh;
+  margin-top: 1.07vh;
   overflow-x: auto;
 }
 
 .small-task {
   display: flex;
   flex-direction: row;
-  width: 200px;
-  padding: 6px;
-}
-
-.two-columns {
-  display: flex;
-  flex-direction: row;
-  gap: 12px;
-  justify-content: space-between;
+  width: 20vh;
+  padding: 0.64vh;
 }
 
 .is-dragging {
   scale: 1.05;
-  box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.25);
+  box-shadow: 0vh 0.53vh 1.61vh rgba(0, 0, 0, 0.25);
   background: rgb(50, 50, 50);
   color: white;
 }
