--- a/css/style.css
+++ b/css/style.css
@@ -32,14 +32,14 @@ header {
 
 .hamburger {
   display: flex;
-  position:relative;
+  position:absolute;
+  top:3vh;
+  right:4vh;
   flex-direction: column;
   justify-content: space-around;
   width: 2.5vh;
   height: 2.5vh;
   padding: 0;
-  right:50%;
-  top:50%;
   background-color: transparent;
   border: none;
   cursor: pointer;
